MinhaLinguagemParser.py
# Generated from MinhaLinguagem.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MinhaLinguagemParser ( Parser ):

    grammarFileName = "MinhaLinguagem.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "';'", "'int'", "'float'", "'string'", 
                     "'{'", "'}'", "'='", "'if'", "'('", "')'", "'else'", 
                     "'while'", "'for'", "'scanf'", "'printf'", "'+'", "'-'", 
                     "'*'", "'/'", "'>'", "'<'", "'=='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ADD", "SUB", "MUL", "DIV", "GT", "LT", 
                      "EQ", "ID", "INT", "FLOAT", "STRING_LITERAL", "WS", 
                      "COMMENT_LINE" ]

    RULE_program = 0
    RULE_declaracao = 1
    RULE_tipo = 2
    RULE_comando = 3
    RULE_bloco = 4
    RULE_atribuicao = 5
    RULE_estruturaIf = 6
    RULE_estruturaWhile = 7
    RULE_estruturaFor = 8
    RULE_leitura = 9
    RULE_escrita = 10
    RULE_expressao = 11
    RULE_termo = 12
    RULE_fator = 13

    ruleNames =  [ "program", "declaracao", "tipo", "comando", "bloco", 
                   "atribuicao", "estruturaIf", "estruturaWhile", "estruturaFor", 
                   "leitura", "escrita", "expressao", "termo", "fator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    ADD=17
    SUB=18
    MUL=19
    DIV=20
    GT=21
    LT=22
    EQ=23
    ID=24
    INT=25
    FLOAT=26
    STRING_LITERAL=27
    WS=28
    COMMENT_LINE=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinhaLinguagemParser.DeclaracaoContext)
            else:
                return self.getTypedRuleContext(MinhaLinguagemParser.DeclaracaoContext,i)


        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinhaLinguagemParser.ComandoContext)
            else:
                return self.getTypedRuleContext(MinhaLinguagemParser.ComandoContext,i)


        def getRuleIndex(self):
            return MinhaLinguagemParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MinhaLinguagemParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 30
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 28
                    self.declaracao()
                    pass

                elif la_ == 2:
                    self.state = 29
                    self.comando()
                    pass


                self.state = 32 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 251782776) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.TipoContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MinhaLinguagemParser.ID)
            else:
                return self.getToken(MinhaLinguagemParser.ID, i)

        def getRuleIndex(self):
            return MinhaLinguagemParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao" ):
                return visitor.visitDeclaracao(self)
            else:
                return visitor.visitChildren(self)




    def declaracao(self):

        localctx = MinhaLinguagemParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.tipo()
            self.state = 35
            self.match(MinhaLinguagemParser.ID)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 36
                self.match(MinhaLinguagemParser.T__0)
                self.state = 37
                self.match(MinhaLinguagemParser.ID)
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 43
            self.match(MinhaLinguagemParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MinhaLinguagemParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = MinhaLinguagemParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 56) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.DeclaracaoContext,0)


        def atribuicao(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.AtribuicaoContext,0)


        def estruturaIf(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.EstruturaIfContext,0)


        def estruturaWhile(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.EstruturaWhileContext,0)


        def estruturaFor(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.EstruturaForContext,0)


        def leitura(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.LeituraContext,0)


        def escrita(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.EscritaContext,0)


        def expressao(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.ExpressaoContext,0)


        def bloco(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.BlocoContext,0)


        def getRuleIndex(self):
            return MinhaLinguagemParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando" ):
                return visitor.visitComando(self)
            else:
                return visitor.visitChildren(self)




    def comando(self):

        localctx = MinhaLinguagemParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_comando)
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.declaracao()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.atribuicao()
                self.state = 49
                self.match(MinhaLinguagemParser.T__1)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 51
                self.estruturaIf()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 52
                self.estruturaWhile()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 53
                self.estruturaFor()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 54
                self.leitura()
                self.state = 55
                self.match(MinhaLinguagemParser.T__1)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 57
                self.escrita()
                self.state = 58
                self.match(MinhaLinguagemParser.T__1)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 60
                self.expressao()
                self.state = 61
                self.match(MinhaLinguagemParser.T__1)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 63
                self.bloco()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinhaLinguagemParser.ComandoContext)
            else:
                return self.getTypedRuleContext(MinhaLinguagemParser.ComandoContext,i)


        def getRuleIndex(self):
            return MinhaLinguagemParser.RULE_bloco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloco" ):
                listener.enterBloco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloco" ):
                listener.exitBloco(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloco" ):
                return visitor.visitBloco(self)
            else:
                return visitor.visitChildren(self)




    def bloco(self):

        localctx = MinhaLinguagemParser.BlocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_bloco)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(MinhaLinguagemParser.T__5)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 251782776) != 0):
                self.state = 67
                self.comando()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 73
            self.match(MinhaLinguagemParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MinhaLinguagemParser.ID, 0)

        def expressao(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return MinhaLinguagemParser.RULE_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao" ):
                listener.enterAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao" ):
                listener.exitAtribuicao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtribuicao" ):
                return visitor.visitAtribuicao(self)
            else:
                return visitor.visitChildren(self)




    def atribuicao(self):

        localctx = MinhaLinguagemParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(MinhaLinguagemParser.ID)
            self.state = 76
            self.match(MinhaLinguagemParser.T__7)
            self.state = 77
            self.expressao()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstruturaIfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.ExpressaoContext,0)


        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinhaLinguagemParser.ComandoContext)
            else:
                return self.getTypedRuleContext(MinhaLinguagemParser.ComandoContext,i)


        def getRuleIndex(self):
            return MinhaLinguagemParser.RULE_estruturaIf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstruturaIf" ):
                listener.enterEstruturaIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstruturaIf" ):
                listener.exitEstruturaIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEstruturaIf" ):
                return visitor.visitEstruturaIf(self)
            else:
                return visitor.visitChildren(self)




    def estruturaIf(self):

        localctx = MinhaLinguagemParser.EstruturaIfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_estruturaIf)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(MinhaLinguagemParser.T__8)
            self.state = 80
            self.match(MinhaLinguagemParser.T__9)
            self.state = 81
            self.expressao()
            self.state = 82
            self.match(MinhaLinguagemParser.T__10)
            self.state = 83
            self.comando()
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 84
                self.match(MinhaLinguagemParser.T__11)
                self.state = 85
                self.comando()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstruturaWhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.ExpressaoContext,0)


        def comando(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.ComandoContext,0)


        def getRuleIndex(self):
            return MinhaLinguagemParser.RULE_estruturaWhile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstruturaWhile" ):
                listener.enterEstruturaWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstruturaWhile" ):
                listener.exitEstruturaWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEstruturaWhile" ):
                return visitor.visitEstruturaWhile(self)
            else:
                return visitor.visitChildren(self)




    def estruturaWhile(self):

        localctx = MinhaLinguagemParser.EstruturaWhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_estruturaWhile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(MinhaLinguagemParser.T__12)
            self.state = 89
            self.match(MinhaLinguagemParser.T__9)
            self.state = 90
            self.expressao()
            self.state = 91
            self.match(MinhaLinguagemParser.T__10)
            self.state = 92
            self.comando()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstruturaForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atribuicao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinhaLinguagemParser.AtribuicaoContext)
            else:
                return self.getTypedRuleContext(MinhaLinguagemParser.AtribuicaoContext,i)


        def expressao(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.ExpressaoContext,0)


        def comando(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.ComandoContext,0)


        def getRuleIndex(self):
            return MinhaLinguagemParser.RULE_estruturaFor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstruturaFor" ):
                listener.enterEstruturaFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstruturaFor" ):
                listener.exitEstruturaFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEstruturaFor" ):
                return visitor.visitEstruturaFor(self)
            else:
                return visitor.visitChildren(self)




    def estruturaFor(self):

        localctx = MinhaLinguagemParser.EstruturaForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_estruturaFor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(MinhaLinguagemParser.T__13)
            self.state = 95
            self.match(MinhaLinguagemParser.T__9)
            self.state = 96
            self.atribuicao()
            self.state = 97
            self.match(MinhaLinguagemParser.T__1)
            self.state = 98
            self.expressao()
            self.state = 99
            self.match(MinhaLinguagemParser.T__1)
            self.state = 100
            self.atribuicao()
            self.state = 101
            self.match(MinhaLinguagemParser.T__10)
            self.state = 102
            self.comando()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LeituraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MinhaLinguagemParser.ID, 0)

        def getRuleIndex(self):
            return MinhaLinguagemParser.RULE_leitura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeitura" ):
                listener.enterLeitura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeitura" ):
                listener.exitLeitura(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLeitura" ):
                return visitor.visitLeitura(self)
            else:
                return visitor.visitChildren(self)




    def leitura(self):

        localctx = MinhaLinguagemParser.LeituraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_leitura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MinhaLinguagemParser.T__14)
            self.state = 105
            self.match(MinhaLinguagemParser.T__9)
            self.state = 106
            self.match(MinhaLinguagemParser.ID)
            self.state = 107
            self.match(MinhaLinguagemParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EscritaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.ExpressaoContext,0)


        def STRING_LITERAL(self):
            return self.getToken(MinhaLinguagemParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return MinhaLinguagemParser.RULE_escrita

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscrita" ):
                listener.enterEscrita(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscrita" ):
                listener.exitEscrita(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEscrita" ):
                return visitor.visitEscrita(self)
            else:
                return visitor.visitChildren(self)




    def escrita(self):

        localctx = MinhaLinguagemParser.EscritaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_escrita)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(MinhaLinguagemParser.T__15)
            self.state = 110
            self.match(MinhaLinguagemParser.T__9)
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 111
                self.expressao()
                pass

            elif la_ == 2:
                self.state = 112
                self.match(MinhaLinguagemParser.STRING_LITERAL)
                pass


            self.state = 115
            self.match(MinhaLinguagemParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinhaLinguagemParser.TermoContext)
            else:
                return self.getTypedRuleContext(MinhaLinguagemParser.TermoContext,i)


        def ADD(self, i:int=None):
            if i is None:
                return self.getTokens(MinhaLinguagemParser.ADD)
            else:
                return self.getToken(MinhaLinguagemParser.ADD, i)

        def SUB(self, i:int=None):
            if i is None:
                return self.getTokens(MinhaLinguagemParser.SUB)
            else:
                return self.getToken(MinhaLinguagemParser.SUB, i)

        def GT(self, i:int=None):
            if i is None:
                return self.getTokens(MinhaLinguagemParser.GT)
            else:
                return self.getToken(MinhaLinguagemParser.GT, i)

        def LT(self, i:int=None):
            if i is None:
                return self.getTokens(MinhaLinguagemParser.LT)
            else:
                return self.getToken(MinhaLinguagemParser.LT, i)

        def EQ(self, i:int=None):
            if i is None:
                return self.getTokens(MinhaLinguagemParser.EQ)
            else:
                return self.getToken(MinhaLinguagemParser.EQ, i)

        def getRuleIndex(self):
            return MinhaLinguagemParser.RULE_expressao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao" ):
                listener.enterExpressao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao" ):
                listener.exitExpressao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressao" ):
                return visitor.visitExpressao(self)
            else:
                return visitor.visitChildren(self)




    def expressao(self):

        localctx = MinhaLinguagemParser.ExpressaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expressao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.termo()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 15073280) != 0):
                self.state = 118
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 15073280) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 119
                self.termo()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MinhaLinguagemParser.FatorContext)
            else:
                return self.getTypedRuleContext(MinhaLinguagemParser.FatorContext,i)


        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(MinhaLinguagemParser.MUL)
            else:
                return self.getToken(MinhaLinguagemParser.MUL, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(MinhaLinguagemParser.DIV)
            else:
                return self.getToken(MinhaLinguagemParser.DIV, i)

        def getRuleIndex(self):
            return MinhaLinguagemParser.RULE_termo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermo" ):
                listener.enterTermo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermo" ):
                listener.exitTermo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTermo" ):
                return visitor.visitTermo(self)
            else:
                return visitor.visitChildren(self)




    def termo(self):

        localctx = MinhaLinguagemParser.TermoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_termo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.fator()
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19 or _la==20:
                self.state = 126
                _la = self._input.LA(1)
                if not(_la==19 or _la==20):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 127
                self.fator()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self):
            return self.getTypedRuleContext(MinhaLinguagemParser.ExpressaoContext,0)


        def ID(self):
            return self.getToken(MinhaLinguagemParser.ID, 0)

        def INT(self):
            return self.getToken(MinhaLinguagemParser.INT, 0)

        def FLOAT(self):
            return self.getToken(MinhaLinguagemParser.FLOAT, 0)

        def STRING_LITERAL(self):
            return self.getToken(MinhaLinguagemParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return MinhaLinguagemParser.RULE_fator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFator" ):
                listener.enterFator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFator" ):
                listener.exitFator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFator" ):
                return visitor.visitFator(self)
            else:
                return visitor.visitChildren(self)




    def fator(self):
